# modern-elt-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/raw/: orders.csv
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/marts/: fct_order_metrics.sql  schema.yml
dbt/models/staging/: schema.yml  stg_orders.sql
sql/: init.sql
src/modern_elt_pipeline/: __init__.py  config.py  db.py  pipeline.py
src/modern_elt_pipeline/extract/: __init__.py  orders.py
src/modern_elt_pipeline/load/: __init__.py  postgres.py
src/modern_elt_pipeline/orchestration/: __init__.py  definitions.py
src/modern_elt_pipeline/quality/: raw_orders.py
tests/: test_extract_orders.py  test_pipeline_imports.py
